# KPop

./: .gitattributes  .gitignore  .gitmodules  BUILD  KPopTwist  README.md  dune-project
lib/: KMerDB.ml  Matrix.ml  Space.ml  Twister.ml  dune
src/: KPopTwist
test/: DistanceIterator.ml  DistanceIterator.txt  NGS-TB-Pangenome.txt  NGS-TB-Test.txt  NGS-TB-Train.txt  clusters-covid.R  clusters-covid.nwk  clusters-tb.R  clusters-tb.nwk  dune
