(lang dune 3.0)

(name KPop)

(generate_opam_files true)

(source
 (github PaoloRibeca/KPop))

(authors "Paolo Ribeca")

(maintainers "Paolo Ribeca")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name KPop)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
